--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -18,11 +19,13 @@
     "radix-ui": "^1.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.57.0",
     "react-router-dom": "^6.30.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.7",
-    "tailwind-merge": "2.5.4"
+    "tailwind-merge": "2.5.4",
+    "zod": "^3.25.56"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
